Fix overflowing styling on weather bar mobile

--- a/css/info-and-weather-bar.css
+++ b/css/info-and-weather-bar.css
@@ -174,6 +174,21 @@
   white-space: nowrap;
 }
 
+@media (max-width: 800px){
+  #weather-bar > div{
+    display: grid;
+    grid-template:
+      "flag details icon" min-content
+      / 32px 1fr 50px;
+    white-space: normal;
+  }
+
+  .weather-bar-details{
+    white-space: normal;
+  }
+  
+}
+
 
 
 
